# tab5-ssh-terminal

./: .gitignore  CMakeLists.txt  README.md  README.zh.md  partitions.csv  sdkconfig  sdkconfig.defaults
components/esp_lcd_st7121/: CMakeLists.txt  README.md  esp_lcd_st7121.c
components/esp_lcd_st7121/include/: esp_lcd_st7121.h
components/ime_pinyin/: CMakeLists.txt  README.md
components/ime_pinyin/include/: dictdef.h  dicttrie.h  ime_alloc.h  ime_pinyin.h  matrixsearch.h
components/ime_pinyin/src/: dictbuilder.cpp  dictlist.cpp  dicttrie.cpp  matrixsearch.cpp  ngram.cpp  pinyinime.cpp  spellingtrie.cpp  userdict.cpp
components/m5stack_tab5/: .component_hash  CMakeLists.txt  README.md  idf_component.yml
components/m5stack_tab5/include/bsp/: display.h
components/m5stack_tab5/src/: bsp_display.c  bsp_io_expander.c
docs/: nat-protocol.md
main/: CMakeLists.txt  Kconfig.projbuild  app_main.c  assets.c  assets.h  ble_prov.c  ble_prov.h  boot_anim.c  boot_anim.h  hid_keyboard.c  hid_keyboard.h  i18n.c  i18n.h  i2c_keyboard.c  i2c_keyboard.h  idf_component.yml  ime_bar.c  ime_bar.h  ime_filter.cpp  ime_filter.h  local_shell.c  local_shell.h  nat_tunnel.c  nat_tunnel.h  power_mgmt.c  power_mgmt.h  power_mon.c  power_mon.h  rtc_rx8130.c  rtc_rx8130.h  security.c  security.h  settings.c  settings.h  setup.c  setup.h  sfx.c  sfx.h  ssh_client.c  ssh_client.h  (+14 more)
main/term/: term.c  term.h  term_render.c  term_render.h
main/term/fonts/: bootlogo150.c  bootlogo150i.c  bootsub34.c  jbmono_20.c  jbmono_30.c  nerd32.c  nerd64.c
main/web/: index.html
tools/: bootanim_preview.py  make_assets.py  patch_esp_hosted.py
tools/ime_host/: Makefile  README.md  test_cli.cpp
tools/nat_host/: mock_relay.py
web/: ble_setup.html
