idf_component_register(
    SRCS
        "app_main.c"
        "wifi.c"
        "ble_prov.c"
        "ssh_client.c"
        "ssh_keys.c"
        "hid_keyboard.c"
        "i2c_keyboard.c"
        "settings.c"
        "security.c"
        "i18n.c"
        "setup.c"
        "assets.c"
        "ime_filter.cpp"
        "ime_bar.c"
        "ui_home.c"
        "status_bar.c"
        "power_mon.c"
        "power_mgmt.c"
        "rtc_rx8130.c"
        "web_config.c"
        "nat_tunnel.c"
        "local_shell.c"
        "voice_input.c"
        "term/term.c"
        "term/term_render.c"
        "term/fonts/jbmono_20.c"
        "term/fonts/jbmono_30.c"
        "term/fonts/cjk24.c"
        "boot_anim.c"
        "sfx.c"
        "term/fonts/bootlogo150.c"
        "term/fonts/bootlogo150i.c"
        "term/fonts/bootsub34.c"
        "term/fonts/nerd64.c"
        "term/fonts/nerd32.c"
    INCLUDE_DIRS "." "term"
    EMBED_TXTFILES "web/index.html"
)
